# ForestTrailGL

./: .gitignore  .gitignore.swp  CMakeLists.txt  Dockerfile  README.md  clangtidy.txt  docker-compose.yml  docker_entrypoint.sh  fetch_and_build.sh  main.cpp
build_output/: CMakeCache.txt  ForestTrailGL  Makefile  cmake_install.cmake
doxygen_files/html/: Camera_8h_source.html  DataStructs_8h_source.html  GUI_8h_source.html  InstancedMesh_8cpp_source.html  InstancedMesh_8h_source.html  InstancedModel_8cpp_source.html  InstancedModel_8h_source.html  Loader_8h_source.html  Mesh_8cpp_source.html  Mesh_8h_source.html  Model_8cpp_source.html  Model_8h_source.html  Renderer_8cpp_source.html  Renderer_8h_source.html  Shader_8cpp_source.html  Shader_8h_source.html  SkyBox_8cpp_source.html  SkyBox_8h_source.html  TerrainModel_8cpp_source.html  TerrainModel_8h_source.html  Terrain_8cpp_source.html  Terrain_8h_source.html  TreeTranslation_8h_source.html  WaterModel_8cpp_source.html  WaterModel_8h_source.html  Water_8cpp_source.html  Water_8h_source.html  annotated.html  classCamera-members.html  classCamera.html  classGUI-members.html  classGUI.html  classInstancedMesh-members.html  classInstancedMesh.html  classInstancedModel-members.html  classInstancedModel.html  classMesh-members.html  classMesh.html  classModel-members.html  classModel.html  (+43 more)
doxygen_files/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  searchdata.js
doxygen_files/latex/: annotated.tex  classCamera.tex  classGUI.tex  classInstancedMesh.tex  classInstancedModel.tex  classMesh.tex  classModel.tex  classRenderer.tex  classShader.tex  classSkyBox.tex  classTerrain.tex  classTerrainModel.tex  classWater.tex  classWaterModel.tex  refman.tex  structProgramState.tex  structProgramState__coll__graph.md5  structTexture.tex  structVertex.tex  structstbi__io__callbacks.tex
glad/src/: glad.c
imgui/: CMakeLists.txt
model/: Camera.cpp  Camera.h  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
model_load/: BridgeModel.cpp  BridgeModel.h  Shader.cpp  Shader.h  bridge_mesh.cpp  bridge_mesh.h
resources/: heightmap.png~  programState.txt
resources/models/: Street_Lamp_1.mtl  bridge.mtl
resources/models/LightBulb/: Lightbulb_General_Poly_OBJ.mtl
resources/models/StreetLamp/: StreetLamp.mtl
resources/models/Tree/: tree.mtl
resources/shaders/: bulb.fs  bulb.vs  depth.fs  depth.gs  depth.vs  hdr.fs  model.fs  model.vs  model_instances.vs  model_load.fs  model_load.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs  water.fs
resources/skybox/daylight/: front.bmp~
skybox/: SkyBox.cpp  SkyBox.h
src/: Camera.h  Shader.cpp  Shader.h  clangtidy.txt  cppcheck.txt  main.cpp
src/entities/instanced_model/: InstancedMesh.cpp  InstancedMesh.h  InstancedModel.cpp  InstancedModel.h
src/entities/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/entities/skybox/: SkyBox.cpp  SkyBox.h
src/entities/terrain/: Terrain.cpp  (+3 more)
src/gui/: GUI.h
src/loader/: Loader.h
src/renderer/: Renderer.cpp  Renderer.h
src/tools/: DataStructs.h  TreeTranslation.h
terrain/: Terrain.cpp  Terrain.h  TerrainModel.cpp  TerrainModel.h
(+4 files in other folders)
